--- a/index.html
+++ b/index.html
@@ -51,17 +51,23 @@
       <div class="p-6 bg-gray-100 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
         <h3 class="text-xl font-semibold">Website Design</h3>
         <p>Build your brand online</p>
-        <img src="Images/Website-Design.jpg" alt="Website Design" class="w-full h-40 object-cover rounded-lg mt-4">
+        <a href="web.html">
+          <img src="Images/Website-Design.jpg" alt="Website Design" class="w-full h-40 object-cover rounded-lg mt-4">
+        </a>
       </div>
       <div class="p-6 bg-gray-100 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
         <h3 class="text-xl font-semibold">Logo & Branding</h3>
         <p>Create a lasting impression</p>
+        <a href="brand.html">
         <img src="Images/branding.png" alt="Logo & Branding" class="w-full h-40 object-cover rounded-lg mt-4">
+        </a>
       </div>
       <div class="p-6 bg-gray-100 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
         <h3 class="text-xl font-semibold">Digital Marketing</h3>
         <p>Get a reliable digital marketing package</p>
+        <a href="brand.html">
         <img src="Images/hero1.jpg" alt="Digital Marketing" class="w-full h-40 object-cover rounded-lg mt-4">
+      </a>
       </div>
     </div>
   </section>
